# manifold

./: .gitignore  build.gradle  settings.gradle
manifold-bpmn/: build.gradle
manifold-bpmn/src/test/resources/: exclusive_branch.bpmn  parallel_branch.bpmn  parallel_branches_nowait.bpmn  parallel_branches_single.bpmn  simple.bpmn
manifold-bpmn/xsd/: bpmn-manifold.xsd
manifold-docgen/: build.gradle
manifold-docgen/src/main/resources/manifold-docgen/: index.html  package.json
manifold-eventbus/: build.gradle
manifold-integration-cowherd/: build.gradle
manifold-integration-weavergirl/: build.gradle
manifold-integration-weavergirl/src/: manifold.js
manifold-realtime/: build.gradle
manifold-realtime-native/: Cargo.toml
manifold-realtime-native/src/: event_node.rs  interface.rs  lib.rs  pthread.rs  worker.rs
manifold-realtime-native/src/tests/: event_tests.rs
manifold-rules/: build.gradle
manifold-spec/: build.gradle
manifold-spec/src/test/resources/database/: base.sql
manifold-story/: build.gradle
manifold-story/src/main/resources/manifold_story/: drama-lib-nashorn.js  drama-lib.js
manifold-story/src/test/resources/manifold_stories/: test.js
manifold-story/src/test/resources/manifold_test_dramas/: simple.drama.js  simple.drama.kts  simple.txt  simple2.txt  simple3.txt
manifold-suspendable/: build.gradle
src/main/kotlin/io/github/notsyncing/manifold/: Manifold.kt  ManifoldAction.kt  ManifoldDependencyProvider.kt  ManifoldManagerProvider.kt  ManifoldRunner.kt  ManifoldTransaction.kt  ManifoldTransactionProvider.kt
(+419 files in other folders)
