[package]
name = "manifold_rt"
version = "0.3.4"
authors = ["notsyncing <song.fc@gmail.com>"]
repository = "https://github.com/notsyncing/manifold"

[dependencies]
byteorder = "1.0.0"
enum_primitive = "*"
num = "*"
libc = "0.2.19"
concurrent-hashmap = { version = "0.2.1", default-features = false }

[lib]
name = "manifold_rt"
path = "src/lib.rs"
crate-type = ["dylib"]